--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Quick & Easy <span>to Use Bootstrap Template</span></h3>
+                            <h3 class="title">Lorem lorem <span>Lorem lorem Lorem lorem</span></h3>
                         </div> <!-- section title -->
                         <p class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, seiam nonumy eirmod
                             tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
